added logs, sqrts and cbrts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>MathFlare</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
+    <meta name="keywords" content="mathflare, math-flare, math flare,liquidgeometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,logarithm,systems of equations solver,logarithm solver,square root,cude root,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle">
     <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="MathFlare LLC." />
     <meta name="og:url" content="https://www.mathflare.tk" />
