added logarithms, square root and cube root calculator in the navbar

--- a/cbrt.html
+++ b/cbrt.html
@@ -140,6 +140,11 @@
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <h5 class="dropdown-header">Basic Algebra</h5>
+                        <a href="logar.html" class="dropdown-item"><i class="bi bi-percent"></i> Logarithms</a>
+                        <a href="sqrt.html" class="dropdown-item"><i class="bi bi-calculator"></i> Square Root Calculator</a>
+                        <a href="cbrt.html" class="dropdown-item aactive"><i class="bi bi-calculator"></i> Cube Root Calculator</a>
+                        <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Equations</h5>
                         <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
                         <a href="equations-second.html" class="dropdown-item"><i class="bi bi-percent"></i> 2nd Degree</a>
