--- a/linear-systems.html
+++ b/linear-systems.html
@@ -169,6 +169,7 @@
     <div class="center">
         <h1 class="text-white title">Linear 2x2 Systems; ax + by = c</h1>
         <hr class="bg-danger" style="width: 60%;" />
+        <form autocomplete="off">
         <h3 class="text-white">First Equation:</h3>
         <hr class="bg-danger" style="width: 50%;" />
         <h4 class="text-white">Enter the value of <i>a</i></h4>
@@ -204,8 +205,9 @@
         </div>
         <br />
         <div class="center-form">
-            <button class="btn btn-success btn-lg" id="button">Calculate</button>
+            <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
         </div>
+        </form>
         <br />
         <div style="max-height: 1em;">
             <p class="text-success" id="output"></p>
