--- a/atriangle.html
+++ b/atriangle.html
@@ -164,6 +164,7 @@
     <div class="center">
         <h1 class="text-white title">Triangle</h1>
         <hr class="bg-danger" style="width: 60%;" />
+        <form autocomplete="off">
         <h4 class="text-white">Enter the triangle's leg</h4>
         <div class="center-form">
             <input type="number" id="fside" placeholder="base" name="side" class="form-control mb-0" step="0.01" min="0" />
@@ -175,8 +176,9 @@
         </div>
         <br />
         <div class="center-form">
-            <button class="btn btn-success btn-lg" id="button">Calculate</button>
+            <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
         </div>
+        </form>
         <br />
         <div style="max-height: 1em;">
             <p class="text-success" id="output"></p>
