--- a/equations.html
+++ b/equations.html
@@ -167,6 +167,7 @@
         <h1 class="text-white title">First Degree Equations</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <!-- X + Y = Z START -->
+        <form autocomplete="off">
         <h4 class="text-white">X &#43; Y &#61; Z</h4>
         <div class="center-form">
             <input type="number" id="y" placeholder="Y" class="form-control mb-0" step="0.01" />
@@ -177,8 +178,9 @@
         </div>
         <br>
         <div class="center-form">
-            <button class="btn btn-success btn-lg equation" id="button">Solve for x</button>
+            <input type="submit" id="button" class="btn btn-success btn-lg" value="Solve for X">
         </div>
+        </form>
         <br />
         <div style="max-height: 1em;">
             <p class="text-success" id="output"></p>
@@ -187,6 +189,7 @@
         <!-- X + Y = Z END -->
         <!-- X - Y = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
+        <form autocomplete="off">
         <h4 class="text-white">X &#8722; Y &#61; Z</h4>
         <div class="center-form">
             <input type="number" id="y2" placeholder="Y" class="form-control mb-0" step="0.01" />
@@ -197,8 +200,9 @@
         </div>
         <br>
         <div class="center-form">
-            <button class="btn btn-success btn-lg equation" id="button2">Solve for x</button>
+            <input type="submit" id="button2" class="btn btn-success btn-lg" value="Solve for X">
         </div>
+        </form>
         <br />
         <div style="max-height: 1em;">
             <p class="text-success" id="output2"></p>
@@ -207,6 +211,7 @@
         <!-- X - Y = Z END -->
         <!-- YX = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
+        <form autocomplete="off">
         <h4 class="text-white">Y &#8727; X &#61; Z</h4>
         <div class="center-form">
             <input type="number" id="y3" placeholder="Y" class="form-control mb-0" step="0.01" />
@@ -217,8 +222,9 @@
         </div>
         <br>
         <div class="center-form">
-            <button class="btn btn-success btn-lg equation" id="button3">Solve for x</button>
+            <input type="submit" id="button3" class="btn btn-success btn-lg" value="Solve for X">
         </div>
+        </form>
         <br />
         <div style="max-height: 1em;">
             <p class="text-success" id="output3"></p>
