--- a/formulas.html
+++ b/formulas.html
@@ -165,7 +165,7 @@
         <h1 class="text-white title">MathFlare Cheat Sheet</h1>
         <hr class="bg-danger" style="width: 70%;" />
         <section id="trigonometry">
-        <h3 class="text-white" id="trig-num">Τrigonometric Νumbers</h3>
+        <h3 class="text-white" id="title"></h3>
         <table class="table table-bordered text-white formulas-table" id="trig-nums">
             <thead class="bg-primary head">
                 <tr>
@@ -221,6 +221,18 @@
                 formulas = myStorage.getItem("formulas");
                 formulas = parseFloat(formulas) + parseFloat(1);
                 myStorage.setItem('formulas', formulas );
+            }
+        });
+    </script>
+    <script>
+        //our "API" in the wild
+        $.ajax({
+            type: "GET",
+            url: "https://api.mathflare.tk/trignums",
+            dataType: "json",
+            cache: true,
+            success: (response) => {
+                $("#title").text(response.title);
             }
         });
     </script>
