elliminated classes with bootstrap utilities

--- a/src/contact.html
+++ b/src/contact.html
@@ -164,7 +164,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Contact MathFlare</h1>
+        <h1 class="text-white">Contact MathFlare</h1>
         <hr class="bg-danger" style="width: 60%; margin: auto;" />
             <form id="contact-form" autocomplete="off">
                 <p class=" text-white"><i class="bi bi-lightbulb"></i> Tip: Include your name in the subject of the email</p>
@@ -175,9 +175,9 @@
                 <div class="center-form">
                     <textarea id="msg" name="text" placeholder="Message" class="form-control message" required></textarea>
                 </div>
-                    <div class="button-group" style="margin-top:10px; margin-bottom:10px;">
-                        <input type="submit" name="send" value="Send" class="btn btn-success send-mail"/>
-                        <input type="submit" id="clear" value="Clear" class="btn btn-danger"/>
+                    <div class="button-group my-3">
+                        <input type="submit" name="send" value="Send" class="btn btn-success mx-1"/>
+                        <input type="submit" id="clear" value="Clear" class="btn btn-danger mx-1"/>
                     </div>
             </form>
             <div class="container-sm">
