--- a/src/cweight.html
+++ b/src/cweight.html
@@ -161,26 +161,26 @@
     </div>
     </nav>
     <!-- NAVBAR END -->
-    <div class="center unit-con">
+    <div class="center mb-5">
         <h1 class="text-white title">Weight Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Pounds</h4>
         <div class="center-form">
             <input id="inputPounds" class="form-control mb-0" type="number" placeholder="Pounds" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white unit-label">Kilograms</h4>
+        <h4 class="text-white m-2">Kilograms</h4>
         <div class="center-form">
             <input id="inputKilograms" class="form-control mb-0" type="number" placeholder="Kilograms" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white unit-label">Ounces</h4>
+        <h4 class="text-white m-2">Ounces</h4>
         <div class="center-form">
             <input id="inputOunces" class="form-control mb-0" type="number" placeholder="Ounces" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white unit-label">Grams</h4>
+        <h4 class="text-white m-2">Grams</h4>
         <div class="center-form">
             <input id="inputGrams" class="form-control mb-0" type="number" placeholder="Grams" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white unit-label">Stones</h4>
+        <h4 class="text-white m-2">Stones</h4>
         <div class="center-form">
             <input id="inputStones" class="form-control mb-0" type="number" placeholder="Stones" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
         </div>
