--- a/src/formulas.html
+++ b/src/formulas.html
@@ -161,7 +161,7 @@
     </div>
     </nav>
     <!-- NAVBAR END -->
-    <div class="center table-margin">
+    <div class="center">
         <h1 class="text-white title">MathFlare Cheat Sheet</h1>
         <hr class="bg-danger" style="width: 70%;" />
         <section id="trigonometry">
