--- a/src/index.html
+++ b/src/index.html
@@ -166,35 +166,31 @@
     </div>
     </nav>
     <!-- NAVBAR END -->
-    <div class="alert alert-dark alert-dismissible " role="alert">
-        Hello Stranger! We recently changed our name from "Liquid Geometry" to "MathFlare". Hope you like it!
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
     <div class="dead-center">
-        <h1 class="text-white title">MathFlare</span></h1>
-        <h3 class="text-danger">the go-to site for geometry and algebra</h3>
-        <div class="d-inline-flex button-group">
+        <h1 class="text-white fs-1">MathFlare</span></h1>
+        <h3 class="text-danger fs-3">the go-to site for geometry and algebra</h3>
+        <div class="d-inline-flex">
             <form action="https://github.com/mathflare" target="_blank">
-                <button class="btn btn-dark">
+                <button class="btn btn-dark m-1">
                     <i class="bi bi-github"></i>
                     GitHub
                 </button>
             </form>
             <form action="https://github.com/mathflare/mathflare/issues" target="_blank">
-                <button class="btn btn-warning">
+                <button class="btn btn-warning m-1">
                     <i class="bi bi-bug-fill"></i>
                     Report a Bug
                 </button>
             </form>
             <form action="https://github.com/mathflare/mathflare/issues" target="_blank">
-                <button class="btn btn-success">
+                <button class="btn btn-success m-1">
                     <i class="bi bi-lightbulb"></i>
                     Suggest an Idea
                 </button>
             </form>
             </div>
             <form action="https://www.lqgm.cf/doge" target="_blank">
-                <button class="btn btn-info sponsor-button" id="lol"  data-toggle="tooltip" data-placement="bottom" title="Sponsored">
+                <button class="btn btn-info m-1 text-white" id="lol"  data-toggle="tooltip" data-placement="bottom" title="Sponsored">
                     <i class="bi bi-currency-bitcoin"></i>
                     Buy DogeCoin
                 </button>
