--- a/src/license.html
+++ b/src/license.html
@@ -162,7 +162,7 @@
     </nav>
     <!-- NAVBAR END -->
     <!-- TOS START -->
-    <div class="text-white tos">
+    <div class="text-white m-4">
         <h2>Open Source Software License / Notice</h2>
         <br>
         <section id="before-you-read">
