--- a/src/stats.html
+++ b/src/stats.html
@@ -166,7 +166,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="container-sm">
-        <h1 class="text-white title">Your Statistics</h1>
+        <h1 class="text-white">Your Statistics</h1>
         <hr class="bg-danger" />
         <button class="btn btn-success" onclick="loadStats()" style="margin-right: 20px; margin-bottom: 20px; margin-bottom: 20px;">Refresh Stats <i class="bi bi-arrow-clockwise"></i></button>
         <button class="btn btn-danger" onclick="clearStats()" style="margin-right: 20px; margin-bottom: 20px; margin-bottom: 20px;">Reset Stats <i class="bi bi-trash-fill"></i></button>
