--- a/src/tos.html
+++ b/src/tos.html
@@ -162,7 +162,7 @@
     </nav>
     <!-- NAVBAR END -->
     <!-- TOS START -->
-    <div class="text-white tos">
+    <div class="text-white m-4">
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
         <p>Your privacy is important to us. It is MathFlare&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.mathflare.tk">https://www.mathflare.tk</a>, and other sites we own and operate. </p>
