--- a/src/404.html
+++ b/src/404.html
@@ -22,15 +22,15 @@
     <!-- OAuth -->
     <meta name="google-signin-client_id" content="574643928295-tftr9maiaoejhtngs28jhdga6v3eueah.apps.googleusercontent.com">
     <!-- STYLES -->
-    <link href="../Content/bootstrap.css" rel="stylesheet" />
-    <link href="../Styles/Footer.css" rel="stylesheet" />
-    <link href="../Styles/Profile.css" rel="stylesheet" />
-    <link href="../Styles/Scrollbar.css" rel="stylesheet" />
-    <link href="../Styles/Site.css" rel="stylesheet" />
+    <link href="Content/bootstrap.css" rel="stylesheet" />
+    <link href="Styles/Footer.css" rel="stylesheet" />
+    <link href="Styles/Profile.css" rel="stylesheet" />
+    <link href="Styles/Scrollbar.css" rel="stylesheet" />
+    <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="../Assets/logo.png">
+    <link rel="icon" type="image/png" href="Assets/logo.png">
     <style>
         .error {
             display: inline-flex; 
@@ -170,21 +170,21 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="dead-center">
-        <h1 class="text-white title">Oops!</h1>
-        <img src="Assets/oops.png" alt="Hmmm...." style="width: 200px; height: auto" />
+        <h1 class="text-white">Oops!</h1>
+        <img src="Assets/oops.png" alt="Hmmm...." style="width: 15rem; height: auto" />
         <div>
             <h2 class="text-white error">Error 404</h2>
         </div>
         <h4 class="text-white">it seems that the page <i id="url"></i> does not exist on this server...</h4>
-        <div class="d-inline-flex button-group">
+        <div class="d-inline-flex">
             <form action="index.html">
-                <button class="btn btn-primary">
+                <button class="btn btn-primary m-1">
                     <i class="bi bi-house"></i>
                     Go to the Home Page
                 </button>
             </form>
             <form action="https://github.com/liquid-geometry/liquidgeometry/issues" target="_blank">
-                <button class="btn btn-warning">
+                <button class="btn btn-warning m-1">
                     <i class="bi bi-bug-fill"></i>
                     Report a Bug
                 </button>
@@ -201,7 +201,7 @@
         $(document).ready(function () {
             var url = window.location.pathname;
             $("#url").text(url.replace('/', ''));
-            console.error('ERROR 404 LIQUID GEOMETRY');
+            console.error('ERROR 404');
             console.error('the page ' + window.location.pathname + ' does not exists. It may have been moved, edited or deleted.');
         });
     </script>
