--- a/src/acircle.html
+++ b/src/acircle.html
@@ -162,7 +162,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Circle</h1>
+        <h1 class="text-white">Circle</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
         <h4 class="text-white">Enter the circle's radius</h4>
