--- a/src/apara.html
+++ b/src/apara.html
@@ -162,7 +162,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Parallelogram</h1>
+        <h1 class="text-white">Parallelogram</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
         <h4 class="text-white">Enter the parallelogram's width</h4>
