--- a/src/atrapezoid.html
+++ b/src/atrapezoid.html
@@ -162,7 +162,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Trapezoid</h1>
+        <h1 class="text-white">Trapezoid</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
         <h4 class="text-white">Enter the trapezoid's small base</h4>
