--- a/src/atriangle.html
+++ b/src/atriangle.html
@@ -162,7 +162,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Triangle</h1>
+        <h1 class="text-white">Triangle</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
         <h4 class="text-white">Enter the triangle's leg</h4>
