--- a/src/cbrt.html
+++ b/src/cbrt.html
@@ -162,7 +162,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Cube Root</h1>
+        <h1 class="text-white">Cube Root</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
         <h4 class="text-white">Enter the number</h4>
