--- a/src/clenght.html
+++ b/src/clenght.html
@@ -161,34 +161,34 @@
     </div>
     </nav>
     <!-- NAVBAR END -->
-    <div class="center unit-con">
-        <h1 class="text-white title">Length Converter</h1>
+    <div class="center mb-5">
+        <h1 class="text-white">Length Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Feet</h4>
         <div class="center-form">
             <input id="inputFeet" class="form-control mb-0" type="number" placeholder="Feet" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white unit-label">Meters</h4>
+        <h4 class="text-white m-2">Meters</h4>
         <div class="center-form">
             <input id="inputMeters" class="form-control mb-0" type="number" placeholder="Meters" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white unit-label">Inches</h4>
+        <h4 class="text-white m-2">Inches</h4>
         <div class="center-form">
             <input id="inputInches" class="form-control mb-0" type="number" placeholder="Inches" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white unit-label">cm</h4>
+        <h4 class="text-white m-2">cm</h4>
         <div class="center-form">
             <input id="inputcm" class="form-control mb-0" type="number" placeholder="cm" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white unit-label">Yards</h4>
+        <h4 class="text-white m-2">Yards</h4>
         <div class="center-form">
             <input id="inputYards" class="form-control mb-0" type="number" placeholder="Yards" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white unit-label">Kilometers</h4>
+        <h4 class="text-white m-2">Kilometers</h4>
         <div class="center-form">
             <input id="inputKilometers" class="form-control mb-0" type="number" placeholder="Kilometers" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white unit-label">Miles</h4>
+        <h4 class="text-white m-2">Miles</h4>
         <div class="center-form">
             <input id="inputMiles" class="form-control mb-0" type="number" placeholder="Miles" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
