--- a/src/equations.html
+++ b/src/equations.html
@@ -164,7 +164,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">First Degree Equations</h1>
+        <h1 class="text-white">First Degree Equations</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <!-- X + Y = Z START -->
         <form autocomplete="off">
