--- a/src/linear-systems.html
+++ b/src/linear-systems.html
@@ -167,7 +167,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Linear 2x2 Systems; ax + by = c</h1>
+        <h1 class="text-white">Linear 2x2 Systems; ax + by = c</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
         <h3 class="text-white">First Equation:</h3>
