--- a/src/phypotenuse.html
+++ b/src/phypotenuse.html
@@ -162,7 +162,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Hypotenuse</h1>
+        <h1 class="text-white">Hypotenuse</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
         <h4 class="text-white">Enter the right triangle's first leg</h4>
