--- a/src/prightside.html
+++ b/src/prightside.html
@@ -162,7 +162,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Right Side</h1>
+        <h1 class="text-white">Right Side</h1>
         <p class="text-warning"><i class="bi bi-exclamation-triangle"></i> JavaScript has been acting up a bit. Proceed at your own risk!</p>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
