fixed zindex issue

--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@
     </div>
     </nav>
     <!-- NAVBAR END -->
-    <div class="alert alert-light alert-dismissible fade show m-2 text-center" style="z-index: 9999999;" role="alert">
+    <div class="alert alert-light alert-dismissible fade show m-2 text-center" style="z-index: 99999;" role="alert">
         Long time no see stanger... Check out our <a href="equations-second.html" class="alert-link">2nd degree equation solver</a>!
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
