--- a/src/index.html
+++ b/src/index.html
@@ -174,31 +174,13 @@
         <h1 class="text-white fs-1">MathFlare</span></h1>
         <h3 class="text-danger fs-3">the go-to site for geometry and algebra</h3>
         <div class="d-inline-flex">
-            <form action="https://github.com/mathflare" target="_blank">
-                <button class="btn btn-dark m-1">
-                    <i class="bi bi-github"></i>
-                    GitHub
-                </button>
-            </form>
-            <form action="https://github.com/mathflare/mathflare/issues" target="_blank">
-                <button class="btn btn-warning m-1">
-                    <i class="bi bi-bug-fill"></i>
-                    Report a Bug
-                </button>
-            </form>
-            <form action="https://github.com/mathflare/mathflare/issues" target="_blank">
-                <button class="btn btn-success m-1">
-                    <i class="bi bi-lightbulb"></i>
-                    Suggest an Idea
-                </button>
-            </form>
-            </div>
-            <form action="https://www.lqgm.cf/doge" target="_blank">
-                <button class="btn btn-info m-1 text-white" id="lol"  data-toggle="tooltip" data-placement="bottom" title="Sponsored">
-                    <i class="bi bi-currency-bitcoin"></i>
-                    Buy DogeCoin
-                </button>
-            </form>
+            <a href="https://github.com/mathflare" target="_blank" rel="noopener" class="btn btn-outline-light m-1"><i class="bi bi-github"></i> GitHub</a>
+            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-warning m-1"><i class="bi bi-bug-fill"></i> Report a Bug</a>
+            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-success m-1"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
+        </div>
+        <div>
+            <a href="https://www.binance.com/en/trade/DOGE_USDT" target="_blank" rel="noopener" class="btn btn-info m-1 text-white" data-toggle="tooltip" data-placement="bottom" title="Sponsored"><i class="bi bi-currency-bitcoin"></i> Buy DogeCoin</a>
+        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
