--- a/src/index.html
+++ b/src/index.html
@@ -178,8 +178,9 @@
             <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-warning m-1"><i class="bi bi-bug-fill"></i> Report a Bug</a>
             <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-success m-1"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
         </div>
-        <div>
+        <div class="">
             <a href="https://www.binance.com/en/trade/DOGE_USDT" target="_blank" rel="noopener" class="btn btn-info m-1 text-white" data-toggle="tooltip" data-placement="bottom" title="Sponsored"><i class="bi bi-currency-bitcoin"></i> Buy DogeCoin</a>
+            <a href="https://www.instagram.com/mathflare" target="_blank" rel="noopener" class="btn btn-danger m-1" data-toggle="tooltip" data-placement="bottom" title="Sponsored"><i class="bi bi-instagram"></i> Instagram</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
